sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:7: error: not found: value flag
		flag = false;
                ^